trying to fix banner length
the banner at some breakpoints is too long

--- a/caroselTest/css/responsive.css
+++ b/caroselTest/css/responsive.css
@@ -44,13 +44,13 @@
 		height: 195px;
 	}
 	.banner1 img{
-  		height:680px; 
+  		height:650px; 
 	}
 	.banner2 img{
-  		height:680px; 
+  		height:650px; 
 	}
 	.banner3 img{
-  		height:680px; 
+  		height:650px; 
 	}
 	.slick-dots{
     	bottom: -100px !important;
